--- a/Tugas2/index.html
+++ b/Tugas2/index.html
@@ -9,7 +9,8 @@
         <h1 style="text-align:center"><a href="#">Universitas Sanata
                 Dharma</a></h1>
         <h2>Leonardus Dale Masan</h2>
-        <p>Nama saya <b>Leonardus Dale Masan</b>. Saat ini saya adalah Mahasiswa prodi
+        <p>Nama saya <b>Leonardus Dale Masan</b>. Saat ini saya adalah Mahasiswa
+            prodi
             Informatika. Kecintaan saya pada game membuat saya tertarik untuk
             memahami lebih dalam tentang komputer dan teknologi. Saya juga
             memiliki ketertarikan pada bahasa pemrograman seperti Java dan
@@ -32,6 +33,11 @@
                 <td>Hernawan</td>
                 <td>205314888</td>
                 <td>Keamanan Jaringan Komputer</td>
+            </tr>
+            <tr>
+                <td>Dalle</td>
+                <td>235314071</td>
+                <td>Pemrograman Platform</td>
             </tr>
         </table>
     </body>
